<resources>
    <string name="app_name">코인헬퍼 for 코인원</string>
    <string name="admob_app_id">ca-app-pub-3455486566753347~3951777717</string>
    <string name="admob_banner_id">ca-app-pub-3455486566753347/9858710514</string>
    <string name="admob_exit_banner_id">ca-app-pub-3455486566753347/9881743310</string>
    <string name="admob_compare_trade_site">ca-app-pub-3455486566753347/9153276114</string>
    <string name="admob_start_interstitial_id">ca-app-pub-3455486566753347/4498510575</string>
    <string name="admob_chart_back_interstitial_id">ca-app-pub-3455486566753347/3338219912</string>
    <string name="auth_google_web_client_id">934192085579-qsk08cm75ea0mon73qthnglf3j6fpg9p.apps.googleusercontent.com</string>

    <string name="donate_btc">16zZo9VvfoWRBmjN7QPZFbCrPLL9qutCp8</string>
    <string name="donate_bch">1JYLSNJbVXYYLKJ5SRKeTWi6qEEQGxZeU5</string>
    <string name="donate_eth">0x751D9E752FAD5FB1B64E1AB3AABDB718773CD485</string>
    <string name="donate_etc">0x7E5BD288AF8B7178475F94AD45DBA2B11CC69012</string>
    <string name="donate_xrp">rp2diYfVtpbgEMyaoWnuaWgFCAkqCAEg28</string>
    <string name="donate_xrp_destination">1145583754</string>
    <string name="donate_qtum">QYnmHfZNiNZYCoc9b7svNhErQqDsuXZWjB</string>
    <string name="donate_ltc">LUThyrG9C3p5qBBou2wSZHECoi5RGCLw2s</string>

    <string name="btc">BTC</string>
    <string name="bch">BCH</string>
    <string name="eth">ETH</string>
    <string name="etc">ETC</string>
    <string name="xrp">XRP</string>
    <string name="qtum">QTUM</string>
    <string name="ltc">LTC</string>
    <string name="iota">IOTA</string>
    <string name="dash">DASH</string>
    <string name="xmr">XMR</string>
    <string name="zec">ZEC</string>
    <string name="btg">BTG</string>
    <string name="omg">OMG</string>
    <string name="eos">EOS</string>
    <string name="empty"></string>
    <string name="server_down">코인원 서버가 다운됐습니다. 잠시만 기다려주세요.</string>
    <string name="last_price">현재가</string>
    <string name="first_price">전일가</string>
    <string name="high_price">고가</string>
    <string name="low_price">저가</string>
    <string name="volume">거래량</string>
    <string name="rate_before_price">전일대비</string>
    <string name="question_exit_coinonehelper">코인헬퍼 for 코인원를 종료할까요?</string>
    <string name="cancel">취소</string>
    <string name="exit">종료</string>
    <string name="compare_another_exchange">거래소 별 가격</string>
    <string name="coinone">코인원</string>
    <string name="bithumb">빗썸</string>
    <string name="korbit">코빗</string>
    <string name="poloniex">폴로닉스</string>
    <string name="poloniex_to_coinone_btc">폴로닉스-코인원BTC</string>
    <string name="coin_notification_alarm">가격 알람</string>
    <string name="coin_type">코인종류</string>
    <string name="price">가격</string>
    <string name="confirm">확인</string>
    <string name="save">저장</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="chatting">채팅</string>
    <string name="send">전송</string>
    <string name="setting">설정</string>
    <string name="account">계정</string>
    <string name="market_account">코인원 계정</string>
    <string name="sign_in_for_google">구글 로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="nickname_changing">별명을 변경 중입니다.</string>
    <string name="nickname_change_success">별명 변경에 성공했습니다.</string>
    <string name="nickname_change_failed">별명 변경에 실패했습니다.</string>
    <string name="google_sign_in_failed">구글 로그인 실패</string>
    <string name="google_sign_in_success">구글 로그인 성공</string>
    <string name="id">아이디</string>
    <string name="nickname">별명</string>
    <string name="developer_page">개발자 페이지</string>
    <string name="copy">복사</string>
    <string name="address_btc_donate">BTC 기부 주소</string>
    <string name="address_bch_donate">BCH 기부 주소</string>
    <string name="address_eth_donate">ETH 기부 주소</string>
    <string name="address_etc_donate">ETC 기부 주소</string>
    <string name="address_xrp_donate">XRP 기부 주소</string>
    <string name="address_qtum_donate">QTUM 기부 주소</string>
    <string name="address_ltc_donate">LTC 기부 주소</string>
    <string name="thanks_to">코인헬퍼 for 코인원 개발자입니다.\n코인헬퍼 for 코인원를 이용해주셔서 감사합니다.\n앞으로 더 좋은 앱을 만들기 위해 노력하겠습니다.</string>
    <string name="send_email_to_developer">개발자에게 메일 보내기</string>
    <string name="send_kakao_to_developer">개발자와 카톡 하기</string>
    <string name="send_email">메일 보내기</string>
    <string name="send_kakao">카톡 하기</string>
    <string name="developer_email_address">sjjeong1225@gmail.com</string>
    <string name="developer_kakao_address">https://open.kakao.com/me/coinonehelper</string>
    <string name="help_developer">개발자 도와주기</string>
    <string name="destination_tag">Destination Tag</string>
    <string name="say_developer">개발자 한마디</string>
    <string name="coin_volume">코인 볼륨</string>
    <string name="capitalization">총량</string>
    <string name="volume_24h">거래량(24h)</string>
    <string name="graph_7days">7일간 그래프</string>
    <string name="others">Others</string>
    <string name="market">마켓</string>
    <string name="buy_currency">구매화폐</string>
    <string name="percent">퍼센트</string>
    <string name="coin">코인</string>
    <string name="my_assets">내 자산</string>
    <string name="chart">차트</string>
    <string name="register_account">계정 등록</string>
    <string name="unregister_account">계정 해제</string>
    <string name="access_token">Access Token</string>
    <string name="secret_key">Secret Key</string>
    <string name="register">등록</string>
    <string name="price_unit_alarm">가격 단위 알람</string>
    <string name="how_to_make_token_and_key">Token과 Key 생성 방법 보러가기</string>
    <string name="precaution">주의사항(필독)</string>
    <string name="description_access_token_secret_key">Access Token과 Secret Key를 발급 할 때 \'거래소 조회\'와 \'사용자 조회\' API 권한을 체크 해주세요.\n그 외 권한은 자산에 피해가 발생 할 수 있습니다.\n\n코인헬퍼 for 코인원는 채팅 기능 외에 서버를 사용하지 않기 때문에 등록하시는 Access Token과 Secret Key는 현재 사용하시는 기기에 저장되고 개발자가 알지 못합니다.\n또한 개발자는 절대로 유저에게 Access Token과 Secret Key를 요구하지 않습니다.\n\nAccess Token과 Secret Key를 타인에게 노출, 양도, 대여, 위임 등 본인의 관리소홀로 발생한 손해는 코인헬퍼 for 코인원에서 책임지지 않습니다.\n\n만약 타인에게 노출 된 경우에 코인원 홈페이지에서 Key를 삭제한 후 재등록 해주세요.</string>
    <string name="ask_register_account">내 자산을 확인하려면 코인원 계정을 등록해야 합니다.\n계정 등록 화면으로 이동하시겠습니까?</string>
    <string name="move">이동</string>
    <string name="no">아니요</string>
    <string name="do_you_want_to_unregister">정말로 계정을 해제하시겠습니까?</string>
    <string name="unregister">해제</string>
    <string name="server_error">Server Error…</string>
    <string name="cant_check_account">계정 정보를 확인 할 수 없습니다. 다시 입력해 주세요.</string>
    <string name="description_register_account">계정 정보를 등록했습니다.</string>
    <string name="checking_account">계정 정보를 확인 중입니다.</string>
    <string name="empty_access_token">AccessToken이 비어있습니다.</string>
    <string name="empty_secret_key">SecretKey가 비어있습니다.</string>
    <string name="dont_have_alarm">등록된 알람이 없습니다.</string>
    <string name="description_load_my_assets_to_coinone">코인원에서 내 재산 정보를 가져오는 중입니다.</string>
    <string name="money">화폐</string>
    <string name="order_avail">거래가능</string>
    <string name="order">거래중</string>
    <string name="assets">자산</string>
    <string name="want_to_exit_plase_one_more_time">종료하려면 한번 더 누르세요.</string>
    <string name="coin_trade">%1$s 거래하기</string>
    <string name="bid">매수</string>
    <string name="ask">매도</string>
    <string name="conclusion_history">체결내역</string>
    <string name="order_amount">주문수량</string>
    <string name="max">최대</string>
    <string name="do_order">주문하기</string>
    <string name="type">구분</string>
    <string name="ask_amount">매도수량</string>
    <string name="bid_amount">매수수량</string>
    <string name="order_price">주문금액</string>
    <string name="time">시간</string>
    <string name="conclusion_price">체결금액</string>
    <string name="requesting">요청 중입니다...</string>
    <string name="server_error_retry">서버 오류가 발생 했습니다.\n다시 시도해주세요.</string>
    <string name="lack_of_amount">주문수량이 너무 적습니다.</string>
    <string name="lack_of_money">거래 가능한 돈이 부족합니다.</string>
    <string name="noti_channel_coinhelper">CoinHelper</string>
    <string name="noti_channel_coinhelper_manager">CoinHelperManager</string>
    <string name="package_name">com.googry.coinonehelper</string>
    <string name="package_name_manager">com.googry.coinonehelper.manager</string>
    <string name="need_amount_price">수량과 가격은 필수 입니다</string>

</resources>
