<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <variable
            name="dialog"
            type="com.googry.coinonehelper.ui.coin_notification_add_alarm.CoinNotificationAddAlarmDialog"/>
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_type"/>

            <RadioGroup
                android:id="@+id/rg_coin_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_btc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btc"/>

                <RadioButton
                    android:id="@+id/rb_eth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eth"/>

                <RadioButton
                    android:id="@+id/rb_etc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etc"/>

                <RadioButton
                    android:id="@+id/rb_xrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xrp"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"/>

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="numberDecimal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{(v) -> dialog.onNegativeButtonClick(v)}"
                    android:text="@string/cancel"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{(v) -> dialog.onPositiveButtonClick(v)}"
                    android:text="@string/confirm"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>