<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <variable
            name="dialog"
            type="com.googry.coinonehelper.ui.widget.MarketAccountRegisterDialog"/>
    </data>

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{ () -> dialog.onShowMakeTokenKeyClick()}">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/how_to_make_token_and_key"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/precaution"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:fadeScrollbars="false"
                android:scrollbarAlwaysDrawVerticalTrack="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_access_token_secret_key"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                </LinearLayout>
            </ScrollView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={dialog.accessToken}"
                android:inputType="text"
                android:hint="@string/access_token"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={dialog.secretKey}"
                android:inputType="text"
                android:hint="@string/secret_key"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{ () -> dialog.onCancelClick()}"
                    android:text="@string/cancel"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{ () -> dialog.onRegisterClick()}"
                    android:text="@string/register"/>
            </LinearLayout>


        </LinearLayout>
    </FrameLayout>

</layout>