<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="dialog"
            type="com.googry.coinonehelper.ui.widget.ExitAdDialog"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.NativeExpressAdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="280x250"
                ads:adUnitId="@string/admob_exit_banner_id">
            </com.google.android.gms.ads.NativeExpressAdView>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAsk"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/question_exit_coinonehelper"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:onClick="@{(v) -> dialog.onCancelClick(v)}"
                    android:textSize="18dp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/exit"
                    android:onClick="@{(v) -> dialog.onExitClick(v)}"
                    android:textColor="@color/black"
                    android:textSize="18dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>