<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.googry.coinonehelper.ui.main.MainFragment"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_btc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="@{fragment::onClickChangeOrderbookType}"
                    android:text="@string/btc"/>

                <Button
                    android:id="@+id/btn_eth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="@{fragment::onClickChangeOrderbookType}"
                    android:text="@string/eth"/>

                <Button
                    android:id="@+id/btn_etc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="@{fragment::onClickChangeOrderbookType}"
                    android:text="@string/etc"/>

                <Button
                    android:id="@+id/btn_xrp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="@{fragment::onClickChangeOrderbookType}"
                    android:text="@string/xrp"/>

            </LinearLayout>

            <com.viewpagerindicator.UnderlinePageIndicator
                android:id="@+id/indicator"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                app:selectedColor="#FFCC0000"/>

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_dashboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </FrameLayout>

</layout>