<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pic_chart_my_assets"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/money"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="3"
                android:gravity="start"
                android:text="@string/order_avail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/order"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/assets"/>

        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_my_assets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
</layout>